feat: integrate register api

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpFragment">
+    tools:context=".ui.register.SignUpFragment">
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -46,7 +46,7 @@
         android:id="@+id/enter_email_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:fontFamily="@font/dmsans_bold"
         android:text="@string/enter_email"
         android:textColor="@color/black"
